--- a/main_scene/public/json/Config.json
+++ b/main_scene/public/json/Config.json
@@ -1,34 +1,34 @@
 {
-  "UID": "1",
-  "NAME": "verhelst-jonathan",
+  "UID": "orange",
+  "NAME": "brikeld-herman",
   "OTHERS": [
     {
-      "name": "andreas-steve",
-      "uid": "1",
+      "name": "brikeld-herman",
+      "uid": "orange",
       "title": "snow"
     },
     {
-      "name": "laurine-nyria",
-      "uid": "2",
+      "name": "laurine-dalia",
+      "uid": "green",
       "title": "flower"
     },
     {
-      "name": "teo-brikeld",
-      "uid": "3",
+      "name": "teo-andreas",
+      "uid": "black",
       "title": "fireworks"
     },
     {
-      "name": "shana-yann",
-      "uid": "4",
+      "name": "shana-daniel",
+      "uid": "blue",
       "title": "snow"
     },
     {
-      "name": "daniel-dalia",
-      "uid": "5",
+      "name": "steve-yann",
+      "uid": "red",
       "title": "snow"
     },
     {
-      "name": "verhelst-jonathan",
+      "name": "nyria-jonathan",
       "uid": "6",
       "title": "fireworks"
     }
