--- a/main_scene/package.json
+++ b/main_scene/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "sass-embedded": "^1.81.1",
     "vite": "^5.4.10"
   },
   "dependencies": {
