--- a/main_scene/package.json
+++ b/main_scene/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dat.gui": "^0.7.9",
     "firebase": "^11.0.2",
+    "gsap": "^3.12.5",
     "three": "^0.170.0"
   }
 }
